Basic html layout

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,33 @@
 </head>
 
 <body>
+  <h1>Add Employee</h1>
+  <label for="first-name">First Name</label>
+  <input type="text" placeholder="First Name">
+  <label for="last-name">Last Name</label>
+  <input type="text" placeholder="Last Name">
+  <label for="job-title">Job Title</label>
+  <input type="text" placeholder="Job Title">
+  <label for="salary">Annual Salary</label>
+  <input type="text" placeholder="Annual Salary">
+  <button>Submit</button>
+  <h1>Employee List</h1>
+  <table>
+    <thead>
+      <tr>
+        <th>First</th>
+        <th>Last</th>
+        <th>Job</th>
+        <th>Salary</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+      </tr>
+    </tbody>
+  </table>
+  <p>Monthly Salary Expense: </p>
 </body>
 
 </html>
