Added function to calculate and display total monthly expenditure

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       </tr>
     </tbody>
   </table>
-  <p>Monthly Salary Expense: </p>
+  <p>Monthly Salary Expense: {{vm.monthlyExpenditure}}</p>
 </body>
 
 </html>
