--- a/public/index.html
+++ b/public/index.html
@@ -3,44 +3,94 @@
 
 <head>
   <title>Employees Full Stack</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="vendors/angular-material.css">
   <link rel="stylesheet" href="styles/style.css">
-  <script src="vendors/angular.min.js"></script>
-  <script src="scripts/client.js"></script>
 </head>
 
-<body ng-app="EmployeesApp" ng-controller="EmployeesController as vm">
-  <h1>Add Employee</h1>
-  <label for="first-name">First Name</label>
-  <input type="text" placeholder="First Name" ng-model="vm.newEmployee.first_name">
-  <label for="last-name">Last Name</label>
-  <input type="text" placeholder="Last Name" ng-model="vm.newEmployee.last_name">
-  <label for="job-title">Job Title</label>
-  <input type="text" placeholder="Job Title" ng-model="vm.newEmployee.job_title">
-  <label for="salary">Annual Salary</label>
-  <input type="text" placeholder="Annual Salary" ng-model="vm.newEmployee.salary">
-  <button ng-click="vm.addEmployee()">Submit</button>
-  <h1>Employee List</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>First</th>
-        <th>Last</th>
-        <th>Job</th>
-        <th>Salary</th>
-        <th>isActive?</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="employee in vm.employees" ng-class="{'inactive': !employee.is_active, 'active': employee.is_active}">
-        <td>{{employee.first_name}}</td>
-        <td>{{employee.last_name}}</td>
-        <td>{{employee.job_title}}</td>
-        <td>{{employee.salary}}</td>
-        <td><button ng-click="vm.toggleActive(employee.id, employee.is_active)">{{employee.is_active ? 'Mark Inactive' : 'Mark Active'}}</button></td>
-      </tr>
-    </tbody>
-  </table>
-  <p>Monthly Salary Expense: {{vm.monthlyExpenditure}}</p>
+<body ng-app="EmployeesApp" ng-cloak>
+  <div ng-controller="EmployeesController as vm" layout="column" ng-cloak class="md-inline-form">
+    <!-- <md-content layout-gt-sm="row" layout-padding>
+      <h1>Add Employee</h1>
+      <label for="first-name">First Name</label>
+      <input type="text" placeholder="First Name" ng-model="vm.newEmployee.first_name">
+      <label for="last-name">Last Name</label>
+      <input type="text" placeholder="Last Name" ng-model="vm.newEmployee.last_name">
+      <label for="job-title">Job Title</label>
+      <input type="text" placeholder="Job Title" ng-model="vm.newEmployee.job_title">
+      <label for="salary">Annual Salary</label>
+      <input type="text" placeholder="Annual Salary" ng-model="vm.newEmployee.salary">
+      <button ng-click="vm.addEmployee()">Submit</button>
+    </md-content> -->
+    <md-content layout-padding>
+      <div>
+        <form name="employeeAddForm" ng-submit="vm.addEmployee()">
+          <div layout-gt-sm="row">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>First name</label>
+              <input ng-model="vm.newEmployee.first_name">
+            </md-input-container>
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Last name</label>
+              <input ng-model="vm.newEmployee.last_name">
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row">
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Job Title</label>
+              <input ng-model="vm.newEmployee.job_title">
+            </md-input-container>
+            <md-input-container class="md-block" flex-gt-sm>
+              <label>Annual Salary</label>
+              <input ng-model="vm.newEmployee.salary">
+            </md-input-container>
+          </div>
+          <div layout-gt-sm="row">
+            <md-button class="md-raised md-cornered md-primary md-hue-2" type="submit">Submit</md-button>
+          </div>
+        </form>
+      </div>
+    </md-content>
+    <md-content flex layout-padding>
+      <h1>Employee List</h1>
+      <table>
+        <thead>
+          <tr>
+            <th>First</th>
+            <th>Last</th>
+            <th>Job</th>
+            <th>Salary</th>
+            <th>isActive?</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr ng-repeat="employee in vm.employees" ng-class="{'inactive': !employee.is_active, 'active': employee.is_active}">
+            <td>{{employee.first_name}}</td>
+            <td>{{employee.last_name}}</td>
+            <td>{{employee.job_title}}</td>
+            <td>{{employee.salary}}</td>
+            <td><button ng-click="vm.toggleActive(employee.id, employee.is_active)">{{employee.is_active ? 'Mark Inactive' : 'Mark Active'}}</button></td>
+          </tr>
+        </tbody>
+      </table>
+      <p>Monthly Salary Expense: {{vm.monthlyExpenditure}}</p>
+    </md-content>
+    <md-list>
+      <md-list-item class="md-2-line" ng-repeat="employee in vm.employees" ng-class="{'inactive': !employee.is_active, 'active': employee.is_active}">
+        <div class="md-list-item-text">
+          <h3>{{employee.first_name}} {{employee.last_name}}</h3>
+          <p>{{employee.job_title}}</p>
+          <p>{{employee.salary}}</p>
+          <p><button class="md-button md-raised md-cornered md-accent md-hue-1" ng-click="vm.toggleActive(employee.id, employee.is_active)">{{employee.is_active ? 'Mark Inactive' : 'Mark Active'}}</button></p>
+        </div>
+      </md-list-item>
+    </md-list>
+  </div>
+  <script src="vendors/angular.js"></script>
+  <script src="vendors/angular-aria.js"></script>
+  <script src="vendors/angular-animate.js"></script>
+  <script src="vendors/angular-material.min.js"></script>
+  <script src="scripts/client.js"></script>
 </body>
 
 </html>
