--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Employees Full Stack</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   <link rel="stylesheet" href="vendors/angular-material.css">
   <link rel="stylesheet" href="styles/style.css">
   <script src="vendors/angular.js"></script>
@@ -16,6 +17,7 @@
 <body ng-app="EmployeesApp" ng-cloak>
   <div ng-controller="EmployeesController as vm" layout="column" ng-cloak class="md-inline-form">
     <md-content layout-padding>
+      <h1>Employees Full Stack</h1>
       <div>
         <form name="employeeAddForm" ng-submit="vm.addEmployee()">
           <div layout-gt-sm="row">
@@ -44,40 +46,24 @@
         </form>
       </div>
     </md-content>
-    <md-content flex layout-padding>
+    <md-content layout-padding>
       <h1>Employee List</h1>
-      <table>
-        <thead>
-          <tr>
-            <th>First</th>
-            <th>Last</th>
-            <th>Job</th>
-            <th>Salary</th>
-            <th>isActive?</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="employee in vm.employees" ng-class="{'inactive': !employee.is_active, 'active': employee.is_active}">
-            <td>{{employee.first_name}}</td>
-            <td>{{employee.last_name}}</td>
-            <td>{{employee.job_title}}</td>
-            <td>{{employee.salary}}</td>
-            <td><button ng-click="vm.toggleActive(employee.id, employee.is_active)">{{employee.is_active ? 'Mark Inactive' : 'Mark Active'}}</button></td>
-          </tr>
-        </tbody>
-      </table>
+      <md-list>
+        <md-list-item class="md-2-line" ng-repeat="employee in vm.employees">
+          <div class="md-list-item-text">
+            <h3 ng-class="{'inactive': !employee.is_active, 'active': employee.is_active}">{{employee.first_name}} {{employee.last_name}}</h3>
+            <p>{{employee.job_title}}</p>
+            <p>{{employee.salary}}</p>
+          </div>
+          <md-button class="md-secondary md-raised md-cornered md-primary md-hue-1" ng-click="vm.toggleActive(employee.id, employee.is_active)">{{employee.is_active ? 'Mark Inactive' : 'Mark Active'}}</md-button>
+          <md-divider ng-if="!$last"></md-divider>
+        </md-list-item>
+      </md-list>
+    </md-content>
+    <md-content layout-padding>
+      <h1>Monthly Expenses</h1>
       <p>Monthly Salary Expense: {{vm.monthlyExpenditure}}</p>
     </md-content>
-    <md-list>
-      <md-list-item class="md-2-line" ng-repeat="employee in vm.employees" ng-class="{'inactive': !employee.is_active, 'active': employee.is_active}">
-        <div class="md-list-item-text">
-          <h3>{{employee.first_name}} {{employee.last_name}}</h3>
-          <p>{{employee.job_title}}</p>
-          <p>{{employee.salary}}</p>
-          <p><button class="md-button md-raised md-cornered md-accent md-hue-1" ng-click="vm.toggleActive(employee.id, employee.is_active)">{{employee.is_active ? 'Mark Inactive' : 'Mark Active'}}</button></p>
-        </div>
-      </md-list-item>
-    </md-list>
   </div>
 </body>
 
