--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   <link rel="stylesheet" href="vendors/angular-material.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
   <script src="vendors/angular.js"></script>
   <script src="vendors/angular-aria.js"></script>
@@ -56,7 +57,6 @@
             <p>{{employee.salary}}</p>
           </div>
           <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)" ng-class="{'md-primary': employee.is_active}">{{employee.is_active ? 'Mark Inactive' : 'Mark Active'}}</md-button>
-          <md-button class="md-secondary md-raised md-cornered">Delete</md-button>
           <md-divider ng-if="!$last"></md-divider>
         </md-list-item>
       </md-list>
