--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,9 @@
 
 <body ng-app="EmployeesApp" ng-cloak>
   <div ng-controller="EmployeesController as vm" layout="column" ng-cloak class="md-inline-form">
-    <md-content layout-padding>
-      <h1 md-colors="{color: 'grey-900'}">Employees Full Stack</h1>
+    <div class="row" flex layout-padding>
+      <h1 md-colors="{color: 'blue-900'}">Employees Full Stack</h1>
+      <h1 md-colors="{color: 'grey-900'}">Add Employee</h1>
       <div>
         <form name="employeeAddForm" ng-submit="vm.addEmployee()">
           <div layout-gt-sm="row">
@@ -40,7 +41,10 @@
           <div layout-gt-sm="row">
             <md-input-container class="md-block" flex-gt-sm>
               <label>Job Title</label>
-              <input ng-model="vm.newEmployee.job_title">
+              <input ng-model="vm.newEmployee.job_title" required name="jobTitle">
+              <div ng-messages="employeeAddForm.jobTitle.$error" role="alert">
+                <div ng-message="required">This is required.</div>
+              </div>
             </md-input-container>
             <md-input-container class="md-block" flex-gt-sm>
               <label>Annual Salary</label>
@@ -55,16 +59,16 @@
           </div>
         </form>
       </div>
-    </md-content>
-    <md-content layout-padding>
+    </div>
+    <div class="row" flex layout-padding>
       <h1 md-colors="{color: 'grey-900'}">Employee List</h1>
-      <h3 md-colors="{color: 'grey-700'}">Active Employees</h3>
       <md-list>
-        <md-list-item class="md-2-line" ng-repeat="employee in vm.employees" ng-if="employee.is_active">
+        <h3 md-colors="{color: 'indigo-200'}">Active Employees</h3>
+        <md-list-item class="md-3-line" ng-repeat="employee in vm.employees" ng-if="employee.is_active">
           <div class="md-list-item-text">
             <h3>{{employee.first_name}} {{employee.last_name}}</h3>
-            <p>{{employee.job_title}}</p>
-            <p>{{employee.salary}}</p>
+            <p>Title: {{employee.job_title}}</p>
+            <p>Salary: {{employee.salary}}</p>
           </div>
           <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)" ng-class="{'md-primary': employee.is_active}">{{employee.is_active ? 'Make Inactive' : 'Activate'}}</md-button>
           <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary ">Edit</md-button>
@@ -72,20 +76,20 @@
         </md-list-item>
       </md-list>
       <md-list>
-        <h3 md-colors="{color: 'grey-700'}">Inactive Employees</h3>
-        <md-list-item class="md-2-line" ng-repeat="employee in vm.employees" ng-if="!employee.is_active">
+        <h3 md-colors="{color: 'indigo-200'}">Inactive Employees</h3>
+        <md-list-item class="md-3-line" ng-repeat="employee in vm.employees" ng-if="!employee.is_active">
           <div class="md-list-item-text">
             <h3>{{employee.first_name}} {{employee.last_name}}</h3>
-            <p>{{employee.job_title}}</p>
-            <p>{{employee.salary}}</p>
+            <p>Title: {{employee.job_title}}</p>
+            <p>Salary: {{employee.salary}}</p>
           </div>
           <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)" ng-class="{'md-primary': employee.is_active}">{{employee.is_active ? 'Make Inactive' : 'Activate'}}</md-button>
           <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary ">Edit</md-button>
           <md-divider></md-divider>
         </md-list-item>
       </md-list>
-    </md-content>
-    <md-content layout-padding>
+    </div>
+    <md-content flex layout-padding>
       <h1 md-colors="{color: 'grey-900'}">Monthly Salary Expenses = {{vm.monthlyExpenditure}}</h1>
     </md-content>
   </div>
