--- a/public/index.html
+++ b/public/index.html
@@ -15,83 +15,95 @@
   <script src="scripts/client.js"></script>
 </head>
 
-<body ng-app="EmployeesApp" ng-cloak>
-  <div ng-controller="EmployeesController as vm" layout="column" ng-cloak class="md-inline-form">
-    <div class="row" flex layout-padding>
-      <h1 md-colors="{color: 'blue-900'}">Employees Full Stack</h1>
-      <h1 md-colors="{color: 'grey-900'}">Add Employee</h1>
-      <div>
-        <form name="employeeAddForm" ng-submit="vm.addEmployee()">
-          <div layout-gt-sm="row">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>First name</label>
-              <input ng-model="vm.newEmployee.first_name" required name="firstName">
-              <div ng-messages="employeeAddForm.firstName.$error" role="alert">
-                <div ng-message="required">This is required.</div>
-              </div>
-            </md-input-container>
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Last name</label>
-              <input ng-model="vm.newEmployee.last_name" required name="lastName">
-              <div ng-messages="employeeAddForm.lastName.$error" role="alert">
-                <div ng-message="required">This is required.</div>
-              </div>
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row">
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Job Title</label>
-              <input ng-model="vm.newEmployee.job_title" required name="jobTitle">
-              <div ng-messages="employeeAddForm.jobTitle.$error" role="alert">
-                <div ng-message="required">This is required.</div>
-              </div>
-            </md-input-container>
-            <md-input-container class="md-block" flex-gt-sm>
-              <label>Annual Salary</label>
-              <input ng-model="vm.newEmployee.salary" type="number" min="0" max="9999999999" name="salary" required>
-              <div ng-messages="employeeAddForm.salary.$error" role="alert">
-                <div ng-message="required">This is required.</div>
-              </div>
-            </md-input-container>
-          </div>
-          <div layout-gt-sm="row">
-            <md-button class="md-raised md-cornered md-primary" type="submit">Submit</md-button>
-          </div>
-        </form>
+<body ng-app="EmployeesApp" ng-controller="EmployeesController as vm">
+  <div class="banner">
+    <h1>Employees Full Stack</h1>
+  </div>
+  <div layout="row" layout-padding>
+    <div flex class="md-inline-form">
+      <h1>Add Employee</h1>
+      <form name="employeeAddForm" ng-submit="vm.addEmployee()">
+        <div layout-gt-sm="row">
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>First name</label>
+            <input ng-model="vm.newEmployee.first_name" required name="firstName">
+            <div ng-messages="employeeAddForm.firstName.$error" role="alert">
+              <div ng-message="required">This is required.</div>
+            </div>
+          </md-input-container>
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Last name</label>
+            <input ng-model="vm.newEmployee.last_name" required name="lastName">
+            <div ng-messages="employeeAddForm.lastName.$error" role="alert">
+              <div ng-message="required">This is required.</div>
+            </div>
+          </md-input-container>
+        </div>
+        <div layout-gt-sm="row">
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Job Title</label>
+            <input ng-model="vm.newEmployee.job_title" required name="jobTitle">
+            <div ng-messages="employeeAddForm.jobTitle.$error" role="alert">
+              <div ng-message="required">This is required.</div>
+            </div>
+          </md-input-container>
+          <md-input-container class="md-block" flex-gt-sm>
+            <label>Annual Salary</label>
+            <input ng-model="vm.newEmployee.salary" type="number" min="0" max="9999999999" name="salary" required>
+            <div ng-messages="employeeAddForm.salary.$error" role="alert">
+              <div ng-message="required">This is required.</div>
+            </div>
+          </md-input-container>
+        </div>
+        <div layout-gt-sm="row">
+          <md-button class="md-raised md-cornered md-primary" type="submit">Submit</md-button>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div layout-gt-sm layout="column" layout-padding>
+    <div flex="33">
+      <h1>Active Employees</h1>
+      <div ng-repeat="employee in vm.employees" ng-if="employee.is_active">
+        <md-card>
+          <md-card-header>
+            <md-card-header-text>
+              <span class="md-title">{{employee.last_name}}, {{employee.first_name}}</span>
+              <span class="md-subhead">{{employee.job_title}}</span>
+            </md-card-header-text>
+          </md-card-header>
+          <md-card-content>
+            <p>Annual Salary: {{employee.salary}}</p>
+          </md-card-content>
+          <md-card-actions layout="row" layout-align="end center">
+            <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary ">Edit</md-button>
+            <md-button class="md-secondary md-raised md-cornered md-primary" ng-click="vm.toggleActive(employee.id, employee.is_active)">Make Inactive</md-button>
+          </md-card-actions>
+        </md-card>
       </div>
     </div>
-    <div class="row" flex layout-padding>
-      <h1 md-colors="{color: 'grey-900'}">Employee List</h1>
-      <md-list>
-        <h3 md-colors="{color: 'indigo-200'}">Active Employees</h3>
-        <md-list-item class="md-3-line" ng-repeat="employee in vm.employees" ng-if="employee.is_active">
-          <div class="md-list-item-text">
-            <h3>{{employee.first_name}} {{employee.last_name}}</h3>
-            <p>Title: {{employee.job_title}}</p>
-            <p>Salary: {{employee.salary}}</p>
-          </div>
-          <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)" ng-class="{'md-primary': employee.is_active}">{{employee.is_active ? 'Make Inactive' : 'Activate'}}</md-button>
-          <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary ">Edit</md-button>
-          <md-divider></md-divider>
-        </md-list-item>
-      </md-list>
-      <md-list>
-        <h3 md-colors="{color: 'indigo-200'}">Inactive Employees</h3>
-        <md-list-item class="md-3-line" ng-repeat="employee in vm.employees" ng-if="!employee.is_active">
-          <div class="md-list-item-text">
-            <h3>{{employee.first_name}} {{employee.last_name}}</h3>
-            <p>Title: {{employee.job_title}}</p>
-            <p>Salary: {{employee.salary}}</p>
-          </div>
-          <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)" ng-class="{'md-primary': employee.is_active}">{{employee.is_active ? 'Make Inactive' : 'Activate'}}</md-button>
-          <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary ">Edit</md-button>
-          <md-divider></md-divider>
-        </md-list-item>
-      </md-list>
+    <div flex="33">
+      <h1>Inactive Employees</h1>
+      <div ng-repeat="employee in vm.employees" ng-if="!employee.is_active">
+        <md-card style="background: #E0E0E0;">
+          <md-card-header>
+            <md-card-header-text>
+              <span class="md-title">{{employee.first_name}} {{employee.last_name}}</span>
+              <span class="md-subhead">{{employee.job_title}}</span>
+            </md-card-header-text>
+          </md-card-header>
+          <md-card-content>
+            <p>Annual Salary: {{employee.salary}}</p>
+          </md-card-content>
+          <md-card-actions layout="row" layout-align="end center">
+            <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)" ng-class="{'md-primary': employee.is_active}">Activate</md-button>
+        </md-card>
+      </div>
     </div>
-    <md-content flex layout-padding>
-      <h1 md-colors="{color: 'grey-900'}">Monthly Salary Expenses = {{vm.monthlyExpenditure}}</h1>
-    </md-content>
+    <div flex="33" class="total-expenditures">
+      <h1>Total Monthly Salary Expenses:</h1>
+      <h1>{{vm.monthlyExpenditure}}</h1>
+    </div>
   </div>
 </body>
 
