--- a/public/index.html
+++ b/public/index.html
@@ -27,36 +27,24 @@
           <md-input-container class="md-block" flex-gt-sm>
             <label>First name</label>
             <input ng-model="vm.newEmployee.first_name" required name="firstName">
-            <div ng-messages="employeeAddForm.firstName.$error" role="alert">
-              <div ng-message="required">This is required.</div>
-            </div>
           </md-input-container>
           <md-input-container class="md-block" flex-gt-sm>
             <label>Last name</label>
             <input ng-model="vm.newEmployee.last_name" required name="lastName">
-            <div ng-messages="employeeAddForm.lastName.$error" role="alert">
-              <div ng-message="required">This is required.</div>
-            </div>
           </md-input-container>
         </div>
         <div layout-gt-sm="row">
           <md-input-container class="md-block" flex-gt-sm>
             <label>Job Title</label>
             <input ng-model="vm.newEmployee.job_title" required name="jobTitle">
-            <div ng-messages="employeeAddForm.jobTitle.$error" role="alert">
-              <div ng-message="required">This is required.</div>
-            </div>
           </md-input-container>
           <md-input-container class="md-block" flex-gt-sm>
             <label>Annual Salary</label>
             <input ng-model="vm.newEmployee.salary" type="number" min="0" max="9999999999" name="salary" required>
-            <div ng-messages="employeeAddForm.salary.$error" role="alert">
-              <div ng-message="required">This is required.</div>
-            </div>
           </md-input-container>
         </div>
         <div layout-gt-sm="row">
-          <md-button class="md-raised md-cornered md-primary" type="submit" ng-click="vm.addEmployee()">Submit</md-button>
+          <md-button class="md-raised md-cornered md-primary" type="submit" ng-click="vm.addEmployee()">Add Employee</md-button>
         </div>
       </form>
     </div>
@@ -76,9 +64,29 @@
             <p>Annual Salary: {{employee.salary}}</p>
           </md-card-content>
           <md-card-actions layout="row" layout-align="end center">
-            <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary ">Edit</md-button>
+            <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary" ng-click="vm.editStatus(employee.id, employee.editing)">Edit</md-button>
             <md-button class="md-secondary md-raised md-cornered md-primary" ng-click="vm.toggleActive(employee.id, employee.is_active)">Make Inactive</md-button>
           </md-card-actions>
+          <md-card-footer ng-show="employee.editing">
+            <h3>Edit {{employee.first_name}}</h3>
+            <md-input-container class="md-block">
+              <label>First name</label>
+              <input ng-model="vm.editEmployee.first_name" name="editFirstName" ng-value="employee.first_name">
+            </md-input-container>
+            <md-input-container class="md-block">
+              <label>Last Name</label>
+              <input ng-model="vm.editEmployee.last_name" name="editLastName" ng-value="employee.last_name">
+            </md-input-container>
+            <md-input-container class="md-block">
+              <label>Job Title</label>
+              <input ng-model="vm.editEmployee.job_title" name="editJobTitle" ng-value="employee.job_title">
+            </md-input-container>
+            <md-input-container class="md-block">
+              <label>Salary</label>
+              <input ng-model="vm.editEmployee.salary" name="editSalary" ng-value="employee.salary">
+            </md-input-container>
+            <md-button class="md-raised" type="submit" ng-click="vm.editEmployee()">Submit Edit</md-button>
+          </md-card-footer>
         </md-card>
       </div>
     </div>
@@ -96,7 +104,8 @@
             <p>Annual Salary: {{employee.salary}}</p>
           </md-card-content>
           <md-card-actions layout="row" layout-align="end center">
-            <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)" ng-class="{'md-primary': employee.is_active}">Activate</md-button>
+            <md-button class="md-secondary md-raised md-cornered" ng-click="vm.toggleActive(employee.id, employee.is_active)">Activate</md-button>
+          </md-card-actions>
         </md-card>
       </div>
     </div>
