--- a/public/index.html
+++ b/public/index.html
@@ -64,28 +64,30 @@
             <p>Annual Salary: {{employee.salary}}</p>
           </md-card-content>
           <md-card-actions layout="row" layout-align="end center">
-            <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary" ng-click="vm.editStatus(employee.id, employee.editing)">Edit</md-button>
-            <md-button class="md-secondary md-raised md-cornered md-primary" ng-click="vm.toggleActive(employee.id, employee.is_active)">Make Inactive</md-button>
+            <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary" ng-click="vm.editStatus(employee.id, employee.editing)">{{!employee.editing ? 'Edit' : 'Cancel'}}</md-button>
+            <md-button class="md-secondary md-raised md-cornered md-primary" ng-click="vm.toggleActive(employee.id, employee.is_active)">Mark Inactive</md-button>
           </md-card-actions>
           <md-card-footer ng-show="employee.editing">
-            <h3>Edit {{employee.first_name}}</h3>
-            <md-input-container class="md-block">
-              <label>First name</label>
-              <input ng-model="vm.editEmployee.first_name" name="editFirstName" ng-value="employee.first_name">
-            </md-input-container>
-            <md-input-container class="md-block">
-              <label>Last Name</label>
-              <input ng-model="vm.editEmployee.last_name" name="editLastName" ng-value="employee.last_name">
-            </md-input-container>
-            <md-input-container class="md-block">
-              <label>Job Title</label>
-              <input ng-model="vm.editEmployee.job_title" name="editJobTitle" ng-value="employee.job_title">
-            </md-input-container>
-            <md-input-container class="md-block">
-              <label>Salary</label>
-              <input ng-model="vm.editEmployee.salary" name="editSalary" ng-value="employee.salary">
-            </md-input-container>
-            <md-button class="md-raised" type="submit" ng-click="vm.editEmployee()">Submit Edit</md-button>
+            <h4>Edit {{employee.first_name}}</h4>
+            <form name="vm.employeeUpdateForm">
+              <md-input-container class="md-block">
+                <label>First name</label>
+                <input ng-model="vm.changeEmployee.first_name" name="editFirstName" required>
+              </md-input-container>
+              <md-input-container class="md-block">
+                <label>Last Name</label>
+                <input ng-model="vm.changeEmployee.last_name" name="editLastName" required>
+              </md-input-container>
+              <md-input-container class="md-block">
+                <label>Job Title</label>
+                <input ng-model="vm.changeEmployee.job_title" name="editJobTitle" required>
+              </md-input-container>
+              <md-input-container class="md-block">
+                <label>Salary</label>
+                <input ng-model="vm.changeEmployee.salary" name="editSalary" type="number" min="0" max="9999999999" required>
+              </md-input-container>
+              <md-button class="md-raised md-primary" ng-click="vm.updateEmployee(employee.id, employee.editing)">Submit Edit</md-button>
+            </form>
           </md-card-footer>
         </md-card>
       </div>
