--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
   <!-- Add a Person form -->
   <div layout="row" layout-padding layout-margin>
-    <div flex class="md-inline-form add-employee-form md-whiteframe-6dp">
+    <div flex="50" class="md-inline-form add-employee-form md-whiteframe-6dp">
       <h1>Add Employee</h1>
       <form name="vm.employeeAddForm">
         <div layout-gt-sm="row">
@@ -55,11 +55,16 @@
         </div>
       </form>
     </div>
+    <!-- Total Monthly Salary -->
+    <div flex="50" class="total-expenditures md-whiteframe-6dp">
+      <h1>Total Monthly Salary Expenses:</h1>
+      <h1>{{vm.monthlyExpenditure}}</h1>
+    </div>
+  </div>
   </div>
   <div layout-gt-sm layout="column" layout-padding layout-margin>
-
     <!-- Active Employee List -->
-    <div flex="33" class="active-employees md-whiteframe-6dp">
+    <div flex="50" class="active-employees md-whiteframe-6dp">
       <h1>Active Employees</h1>
 
       <div ng-repeat="employee in vm.employees" ng-if="employee.is_active">
@@ -72,43 +77,43 @@
           </md-card-header>
           <md-card-content>
             <p>Annual Salary: {{vm.getEmployeeSalary(employee.salary)}}</p>
+            <!-- Employee Edit Form -->
+            <div ng-show="employee.editing" class="md-whiteframe-1dp" layout-padding>
+              <h4>Edit {{employee.first_name}}</h4>
+              <form name="vm.employeeUpdateForm">
+                <md-input-container class="md-block">
+                  <label>First name</label>
+                  <input ng-model="employee.first_name" name="editFirstName" ng-value="employee.first_name" required>
+                </md-input-container>
+                <md-input-container class="md-block">
+                  <label>Last Name</label>
+                  <input ng-model="employee.last_name" name="editLastName" required>
+                </md-input-container>
+                <md-input-container class="md-block">
+                  <label>Job Title</label>
+                  <input ng-model="employee.job_title" name="editJobTitle" required>
+                </md-input-container>
+                <md-input-container class="md-block">
+                  <label>Salary</label>
+                  <input ng-model="employee.salary" name="editSalary" type="number" min="0" max="9999999999" required>
+                </md-input-container>
+              </form>
+            </div>
           </md-card-content>
 
           <!-- Employee Action Buttons -->
           <md-card-actions layout="row" layout-align="end center">
-            <md-button ng-show="employee.editing" class="md-raised md-primary" ng-click="vm.updateEmployee(employee.id, employee.editing)">Submit Edit</md-button>
-            <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary md-hue-1" ng-click="vm.editStatus(employee.id, employee.editing)">{{!employee.editing ? 'Edit' : 'Cancel'}}</md-button>
+            <md-button ng-show="employee.editing" class="md-raised md-primary" ng-click="vm.updateEmployee(employee.id, employee.editing, employee.first_name, employee.last_name, employee.job_title, employee.salary)">Submit Edit</md-button>
+            <md-button ng-show="employee.is_active" class="md-secondary md-raised md-cornered md-primary md-hue-2" ng-click="vm.editStatus(employee.id, employee.editing)">{{!employee.editing ? 'Edit' : 'Cancel'}}</md-button>
             <md-button class="md-secondary md-raised md-cornered md-accent" ng-click="vm.toggleActive(employee.id, employee.is_active)">Mark Inactive</md-button>
           </md-card-actions>
 
-          <!-- Employee Edit Form -->
-          <md-card-footer ng-show="employee.editing">
-            <h4>Edit {{employee.first_name}}</h4>
-            <form name="vm.employeeUpdateForm">
-              <md-input-container class="md-block">
-                <label>First name</label>
-                <input ng-model="vm.changeEmployee.first_name" name="editFirstName" ng-value="employee.first_name" required>
-              </md-input-container>
-              <md-input-container class="md-block">
-                <label>Last Name</label>
-                <input ng-model="vm.changeEmployee.last_name" name="editLastName" required>
-              </md-input-container>
-              <md-input-container class="md-block">
-                <label>Job Title</label>
-                <input ng-model="vm.changeEmployee.job_title" name="editJobTitle" required>
-              </md-input-container>
-              <md-input-container class="md-block">
-                <label>Salary</label>
-                <input ng-model="vm.changeEmployee.salary" name="editSalary" type="number" min="0" max="9999999999" required>
-              </md-input-container>
-            </form>
-          </md-card-footer>
         </md-card>
       </div>
     </div>
 
     <!-- Inactive Employee List -->
-    <div flex="33" class="inactive-employees md-whiteframe-6dp">
+    <div flex="50" class="inactive-employees md-whiteframe-6dp">
       <h1>Inactive Employees</h1>
       <div ng-repeat="employee in vm.employees" ng-if="!employee.is_active">
         <md-card>
@@ -127,13 +132,6 @@
         </md-card>
       </div>
     </div>
-
-    <!-- Total Monthly Salary -->
-    <div flex="33" class="total-expenditures md-whiteframe-6dp">
-      <h1>Total Monthly Salary Expenses:</h1>
-      <h1>{{vm.monthlyExpenditure}}</h1>
-    </div>
-  </div>
 </body>
 
 </html>
